--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.7.1",
     "color-convert": "^2.0.1",
     "react": "^16.12.0",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "tone": "^13.8.25"
