--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "color-convert": "^2.0.1",
     "react": "^16.12.0",
     "react-device-detect": "^1.11.14",
